# ChangeLog for dev-lang/swi-prolog
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.142 2008/04/21 07:47:13 keri Exp $

*swi-prolog-5.6.54 (21 Apr 2008)

  21 Apr 2008; keri <keri@gentoo.org> +swi-prolog-5.6.54.ebuild:
  Version bump. Skipping -5.6.53 since it was a broken and short-lived release.

  25 Mar 2008; keri <keri@gentoo.org> swi-prolog-5.6.49.ebuild:
  amd64 stable. Closes 210499.

*swi-prolog-5.6.52 (14 Mar 2008)

  14 Mar 2008; keri <keri@gentoo.org> +swi-prolog-5.6.52.ebuild:
  Version bump.

  08 Mar 2008; keri <keri@gentoo.org> swi-prolog-5.6.51.ebuild:
  Support ibm-jdk-1.6.

*swi-prolog-5.6.51 (25 Feb 2008)

  25 Feb 2008; keri <keri@gentoo.org> +swi-prolog-5.6.51.ebuild:
  Version bump.

  19 Feb 2008; Raúl Porcel <armin76@gentoo.org> swi-prolog-5.6.49.ebuild:
  alpha/sparc stable wrt #210499

  19 Feb 2008; keri <keri@gentoo.org> swi-prolog-5.6.49.ebuild,
  swi-prolog-5.6.50.ebuild:
  Disable rdf_zlib_plugin tests when zlib4pl is not built.

  18 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  swi-prolog-5.6.49.ebuild:
  stable x86, bug 210499

  17 Feb 2008; nixnut <nixnut@gentoo.org> swi-prolog-5.6.49.ebuild:
  Stable on ppc wrt bug 210499

  16 Feb 2008; keri <keri@gentoo.org> swi-prolog-5.6.49.ebuild,
  swi-prolog-5.6.50.ebuild:
  Add 2101-qcompile-atom.patch to fix atom-gc during qcompile.

*swi-prolog-5.6.50 (06 Feb 2008)

  06 Feb 2008; keri <keri@gentoo.org> +swi-prolog-5.6.50.ebuild:
  Version bump.

  20 Jan 2008; keri <keri@gentoo.org> swi-prolog-5.6.48.ebuild,
  swi-prolog-5.6.49.ebuild:
  Load utf8 library for clib memfile encoding unit tests.

*swi-prolog-5.6.49 (18 Jan 2008)

  18 Jan 2008; keri <keri@gentoo.org> +swi-prolog-5.6.49.ebuild:
  Version bump.

  10 Jan 2008; Vlastimil Babka <caster@gentoo.org> swi-prolog-5.6.37.ebuild,
  swi-prolog-5.6.38.ebuild, swi-prolog-5.6.39.ebuild,
  swi-prolog-5.6.40.ebuild, swi-prolog-5.6.41.ebuild,