@@ -1,11 +1,14 @@
 DIST pl-5.6.49.tar.gz 11529252 RMD160 03c55d46e104cc5d9d6caf967852df7dafe31c31 SHA1 3c062cfa1d59af8377044d30a128c27bc8012fc3 SHA256 c966333a541fd719b3a76012178e1e9299c211f8896c2ee78b451ed857164433
 DIST pl-5.6.50.tar.gz 11718735 RMD160 18fe8d3b4e8c78dfea3c33e355a087c8bfcf5e44 SHA1 9f24a66c65308aae4dcf31dfbaf56fcbdd512224 SHA256 4b6f47e216e5fd7d956f6b737dd7da0aa5cf1bab02f5d5b7607d5d2f03148d34
 DIST pl-5.6.54.tar.gz 11780729 RMD160 f26e6502a9194d29d876c96b5a655f5c7573db38 SHA1 d2b8c7ca13281b8e23d3e34a6745a341bd5b5719 SHA256 3d543f84cf57bc4d334b7604846ccde68450d85dd2d8899b018349d3f35a18f9
+DIST pl-5.6.55.tar.gz 11818376 RMD160 e9a2823caeee980e21a091773ea60aade72d3835 SHA1 d7d5bfd3c35c0744c14fbd31c4e3178593d31c62 SHA256 9f05766d29ee6648ce6cbae4ccfe536e348ab12503d423b3ce32e5ff96bb8bfc
 DIST swi-prolog-5.6.49-gentoo-patchset-3.tar.gz 9740 RMD160 6fbc28cb5873aa97550a535992c1262b529eca41 SHA1 13778b36c8e4730440667ecfa8844a5c29a918e8 SHA256 3fdbefc012d6c6f8a2c7a46be9163a09c48ef5d567abcee81245df5914efa456
 DIST swi-prolog-5.6.50-gentoo-patchset-2.tar.gz 9310 RMD160 785f35f7cd69f0ac7770d9dc352d218ce3ef11cb SHA1 b633add9a558479a4294eb9ea8b13156ab7974e0 SHA256 5a65fc22cde60b10a1d5f61869bdb909694d57a6be55ec3cd03836a00b325ce2
 DIST swi-prolog-5.6.54-gentoo-patchset-0.tar.gz 8504 RMD160 6e516a08b30573ac152b05d9d177259a99bdd0f9 SHA1 0141dc49802862ed7735b6b4f3f9a9984ccfd957 SHA256 c8399cf50b9a31974df2ba302dec25479b68918efd64c13beaecfb1f76e58630
+DIST swi-prolog-5.6.55-gentoo-patchset-0.tar.gz 8546 RMD160 5b585a10c2f864735d440090a7e314f3eb15e173 SHA1 fcc41e20da25383f9bfaf0d9c916f2e765a8f628 SHA256 759031af813b7baebe1032e05081cc7933c10cd430700c5691659dda9f48aaea
 EBUILD swi-prolog-5.6.49.ebuild 3418 RMD160 8a27cb3243ae6036f68e683bb20044b1308a9150 SHA1 c559eb09ae7c6362bc8c145571d761a5b832d8dd SHA256 b058264876c43a405150a0488f4954c4494557f6c015c76d9c8ba60d8e4832a5
 EBUILD swi-prolog-5.6.50.ebuild 3418 RMD160 ff2ce445b431c653280a1f386a36498dc51cd10c SHA1 75d84b4432295ea1864ef8dc403a6d3576dd3b39 SHA256 329507a22974fc6238e4c4dc508b6cc8f1133a17085a52944bf710a8c7fcca93
 EBUILD swi-prolog-5.6.54.ebuild 3418 RMD160 4bfe0d79d9ac5a1c0b7d0f7a36d454676092511a SHA1 64b43fb27187b0d544e5c3adb4b1e1b73fb30a52 SHA256 2a11ac4e43694e192932f4b5a596ac9397305b8a479f18bc17fdc7e492121e43
-MISC ChangeLog 25058 RMD160 2dc6562eac2292ac39ed705e3e08be156ff18912 SHA1 b4b542990f7498d50df39b4f152d47db69027304 SHA256 3e04a09fd4efb010701dde2eb4d466d46a31e2fe84731dcb48121d75e417d2a1
+EBUILD swi-prolog-5.6.55.ebuild 3418 RMD160 9e9d66a76061a0c49e8105c6c920cc2c8b593935 SHA1 cf80f386452d1d8692534f8c72a7ac3790ffe0ca SHA256 fc0d65e8b8958ac7825dacd1f6cf6a85783380ed900b4803a2dec493b673043f
+MISC ChangeLog 25174 RMD160 c727ead99418b79ab7f5636b1acfd3a098632b3d SHA1 8b7d191b4cd0e39cae23866aa6601f1a59147a3d SHA256 c68fa015e93408bd3cf4059790215b6f2fe110420c08ca5f0b7630f2bc77b387
 MISC metadata.xml 159 RMD160 38d27fd1c5faabedefa5507dfd83cb4c952fbc8c SHA1 52b92682cf41e53e71bf432537a16215bd9546b1 SHA256 851bf218a4283a1d8ea6ef98af0119a40eaa78bfaaec49c2f3440437f52889ba
